--- a/client/styles/navigation.module.css
+++ b/client/styles/navigation.module.css
@@ -1,5 +1,3 @@
-
-
 .navigation {
     position: fixed;
     top: 1rem;
@@ -56,6 +54,15 @@
 .navLink:hover::after {
     transform: scaleX(1);
 }
+
+@media (min-width: 768px) {
+
+    /* Applies if either is true */
+    .navigation {
+        width: 90%;
+    }
+}
+
 
 /* 
 =======================================
@@ -169,7 +176,11 @@
 }
 
 /* Responsive Styles */
-@media (max-width: 1200px) {
+@media (min-width: 1200px) {
+    .heroSection {
+        width: 100vw;
+    }
+
     .navigation {
         width: 90%;
         padding: 0.6rem 2rem;
@@ -344,17 +355,18 @@ Trusted Section
 }
 
 @media (max-width: 900px) {
-    .trustedSection{
+    .trustedSection {
         height: 100%;
         padding: 10px;
     }
-    .trustedSection h2{
+
+    .trustedSection h2 {
         text-align: center;
         font-weight: 16px;
     }
 
-    .trustedLink{
-        padding:10px;
+    .trustedLink {
+        padding: 10px;
     }
 
     .trustedLink ul {
@@ -364,7 +376,7 @@ Trusted Section
         align-items: center;
         justify-content: center;
         height: 100%;
-        padding:10px;
+        padding: 10px;
     }
 }
 
@@ -378,9 +390,11 @@ Platform Features
     text-align: center;
     padding: 4rem 2rem;
     width: 100%;
-    background: rgba(125, 38, 255, 0.08); /* light purple tint */
+    background: rgba(125, 38, 255, 0.08);
+    /* light purple tint */
     backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px); /* for Safari support */
+    -webkit-backdrop-filter: blur(12px);
+    /* for Safari support */
     border-radius: 1rem;
     transition: background 0.3s ease;
     margin-top: 2rem;
@@ -465,10 +479,9 @@ Platform Features
     FAQ QAN Section
 ========================================
 */
-.faqSection{
+.faqSection {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    
-}
 
+}
